source destination ios bug fix

--- a/src/components/DealItem/DealItem.scss
+++ b/src/components/DealItem/DealItem.scss
@@ -102,7 +102,7 @@
 }
 
 .source-destination {
-  width: fit-content;
+  width: auto;
   height: 22px;
   font-size: 12px;
   color: white;
